--- a/HinaBot-NeoAspect.csproj
+++ b/HinaBot-NeoAspect.csproj
@@ -16,7 +16,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.1.0" />
+    <PackageReference Include="LiveChartsCore.SkiaSharpView" Version="2.0.0-beta.361" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.3.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Sora" Version="0.9.9" />
     <PackageReference Include="System.CodeDom" Version="6.0.0" />
