--- a/HinaBot-NeoAspect.csproj
+++ b/HinaBot-NeoAspect.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>HinaBot_NeoAspect</RootNamespace>
     <Platforms>AnyCPU;x86;x64</Platforms>
   </PropertyGroup>
@@ -19,7 +19,7 @@
     <PackageReference Include="LiveChartsCore.SkiaSharpView" Version="2.0.0-beta.361" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.3.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="Sora" Version="0.9.9" />
+    <PackageReference Include="Sora" Version="1.0.0-rc.78" />
     <PackageReference Include="System.CodeDom" Version="6.0.0" />
     <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
   </ItemGroup>
